--- a/style.css
+++ b/style.css
@@ -142,11 +142,12 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2;
+    color: #ffffff;
 }
 
 .profile-pic {
-    width: 150px;
-    height: 150px;
+    width: 190px;
+    height: 190px;
     margin: 0 auto 20px auto;
     border-radius: 50%;
     background: linear-gradient(145deg, #1a1a28, #222240);
@@ -158,6 +159,10 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.profile-pic:hover{
+    transform: scale(110%);
+    transition: 0.3s ease
 }
 
 .projects {
@@ -214,6 +219,10 @@ body {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
     border: 2px solid #000;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
+}
+.project-box:hover {
+transform: scale(110%);
+transition: 0.3s ease
 }
 footer {
     background-color: #1e1e2f;
